Fix: Improve slider styling, add max chroma calculations, and add option to preserve original fills
## Changes

This PR addresses several issues with the color adjustment sliders and improves the overall user experience:

### Bug Fixes
- Fixed "Invalid contrast format" error that occurred when calculating maximum chroma values
- Implemented a robust error handling system with fallbacks throughout the code
- Replaced problematic `maxChroma` function call with a reliable custom implementation

### UX Improvements
- Added "Preserve original fills" checkbox option that allows users to add a new fill instead of replacing the existing one
- Implemented ghost slider UI in the empty state to provide visual guidance for users
- Reduced opacity for ghost sliders to clearly indicate they're inactive until layer selection

### Technical Improvements
- Created a bell curve algorithm to calculate appropriate maximum chroma values based on lightness
- Added comprehensive error handling with detailed logging for easier debugging
- Improved initialization code to prevent errors during component mounting
- Used safer default values to prevent edge cases

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "pnpm run /^test:/"
   },
   "dependencies": {
+    "@create-figma-plugin/ui": "^4.0.0",
     "@figma/plugin-typings": "^1.79.0",
     "@floating-ui/react": "^0.25.2",
     "@nanostores/react": "^0.7.1",
